# team0x00

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  docker-compose.yml
CIFF_parser/: ciff  ciff.cpp  ciff.hpp
frontend/team0x00-app/: package-lock.json  package.json  testbackend.js
frontend/team0x00-app/src/: api-service.js  fonts.css  index.css  index.js
frontend/team0x00-app/ui_elements/: index.html  styles.css
include/caff/: caff.hpp  caff_parser.h
selenium/: team0x00-caffgram.side
src/: cpplog.hpp  gif_converter.cpp  gif_converter.h  main.cpp
src/caff/: caff.hpp  caff_parser.cpp  date_validator.hpp
src/ciff/: ciff  ciff.cpp  ciff.hpp
test-files/CIFF/test-vectors-biztonsagos-szoftverfejlesztes/: test1.ciff  test10.ciff  test11.ciff  test12.ciff  test13.ciff  test14.ciff  test16.ciff  test2.ciff  test3.ciff  test4.ciff  test5.ciff  test7.ciff  test8.ciff  test9.ciff  valid-invalid-kimenetek.txt
web-server/config/: config.ini
web-server/deployment/: dev.Dockerfile  prod.Dockerfile
web-server/docs/: postman_collection.json
web-server/src/: app.py  requirements.txt  responses.json  responses.py  routes.py  server.py  users.db
web-server/src/auth/: exceptions.py  internal_api.py  routes.py  service.py  userdb.py
web-server/src/caff/: caffdb.py  exceptions.py  routes.py  service.py
web-server/src/init/: init_authdb.py  init_imagesdb.py
web-server/src/post/: exceptions.py  json_encoder.py  postdb.py  routes.py  service.py
web-server/src/user/: exceptions.py  roles.py  routes.py  service.py  userdb.py
(+36 files in other folders)
